<resources>
    <string name="pull_to_refresh_pull_label">下拉刷新数据</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_release_label">松手加载数据</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="BACKING_RUNING">AnyChatCallCenter正在后台运行</string>
    <string name="C14Bet">胜负彩投注</string>
    <string name="C9Bet">任选九投注</string>
    <string name="CoopLine">合作热线：021-20219988</string>
    <string name="ETFFundMenu_CrossBorderBuy">跨境ETF申购</string>
    <string name="ETFFundMenu_CrossBorderSell">跨境ETF赎回</string>
    <string name="ETFFundMenu_CrossMarketBuy">跨市场ETF申购</string>
    <string name="ETFFundMenu_CrossMarketSell">跨市场ETF赎回</string>
    <string name="ETFFundMenu_SingleMarketBuy">ETF申购</string>
    <string name="ETFFundMenu_SingleMarketCancel">ETF撤单</string>
    <string name="ETFFundMenu_SingleMarketSell">ETF赎回</string>
    <string name="OfferRepurchaseMenu_BJHGDZQY">报价回购电子签约</string>
    <string name="OfferRepurchaseMenu_BJHGXXCX">报价回购信息查询</string>
    <string name="OfferRepurchaseMenu_BZZX">不再续作</string>
    <string name="OfferRepurchaseMenu_DRWT">委托查询</string>
    <string name="OfferRepurchaseMenu_FDLLCX">分段利率查询</string>
    <string name="OfferRepurchaseMenu_HGSB">回购申报</string>
    <string name="OfferRepurchaseMenu_LSCJ">历史成交</string>
    <string name="OfferRepurchaseMenu_LSWT">历史委托</string>
    <string name="OfferRepurchaseMenu_TQGH">提前购回</string>
    <string name="OfferRepurchaseMenu_TQZZ">提前终止</string>
    <string name="OfferRepurchaseMenu_WDQHYCX">未到期合约查询</string>
    <string name="OfferRepurchaseMenu_WTCD">当日撤单</string>
    <string name="OfferRepurchaseMenu_XZBG">续做变更</string>
    <string name="OfferRepurchaseMenu_YYBZZX">预约不再续作</string>
    <string name="OfferRepurchaseMenu_YYTQGH">预约提前购回</string>
    <string name="OfferRepurchaseMenu_YYTQGHCD">预约提前购回撤销</string>
    <string name="OfferRepurchaseMenu_YYTQZZ">预约提前终止</string>
    <string name="OfferRepurchaseMenu_YYTQZZCX">预约提前终止查询</string>
    <string name="OfferRepurchaseMenu_ZDZQCX">自动展期查询</string>
    <string name="OfferRepurchaseMenu_ZDZQHYCX">自动展期合约查询</string>
    <string name="OfferRepurchaseMenu_ZYQMXCX">质押券查询</string>
    <string name="SH_COMPOSITE_INDEX">上证指数</string>
    <string name="SZ_COMPOSITE_INDEX">深证成指</string>
    <string name="SZ_CYB_INDEX">创业板指</string>
    <string name="TradeMenu_ETFFund">ETF基金</string>
    <string name="TradeMenu_OfferRepurchase">报价回购</string>
    <string name="VerCodeFormatError">验证码错误！</string>
    <string name="_fu">负</string>
    <string name="_ping">平</string>
    <string name="_sheng">胜</string>
    <string name="aboutWap">wapgw.cn</string>
    <string name="ac_enterroom_failed">进入房间失败</string>
    <string name="ac_lggin_failed">视频服务器登录失败</string>
    <string name="ac_networkcheck">当前网络连接有异常，请检查网络</string>
    <string name="ac_returncode_bussiness">呼叫对象正忙，请稍后再试</string>
    <string name="ac_returncode_disconnect">对方网络异常</string>
    <string name="ac_returncode_offline">呼叫用户不在线</string>
    <string name="ac_returncode_requestcancel">用户取消呼叫</string>
    <string name="ac_returncode_requestrefuse">用户拒绝被呼叫</string>
    <string name="ac_returncode_timeout">呼叫超时</string>
    <string name="ac_serverlink_close">与视频服务器断开连接，请检查网络</string>
    <string name="ac_session_end">会话已经挂断</string>
    <string name="ac_sessioning_reqite">请求与您通话！</string>
    <string name="ac_user_offline">目标用户离线</string>
    <string name="accumulate">累积</string>
    <string name="acountfind">转账查询</string>
    <string name="action_settings">Settings</string>
    <string name="addMineStock">添加</string>
    <string name="addWarn">添加预警</string>
    <string name="addWarnZf">涨幅：</string>
    <string name="add_self_stock_tip">暂无自选股，点击添加</string>
    <string name="addstock">加自选</string>
    <string name="addwarnfail">添加预警失败！原因：</string>
    <string name="addwarnsuccess">添加预警成功！</string>
    <string name="advance_stop_tip">尊敬的用户，如果进行提前终止，合约在存续期间的利息收入将按活期利率计算，且提前购回不允许撤单</string>
    <string name="agree">同意</string>
    <string name="agreeYhxy">请阅读并同意《用户协议》</string>
    <string name="all_varieties">全部品种</string>
    <string name="alreadyadd">已加入</string>
    <string name="amount_exceed">方案总额超限（最大2000000），超限的期次无法进行追号</string>
    <string name="announcement">开奖公告</string>
    <string name="app_id">576006e3</string>
    <string name="app_list_footer_loading">正在加载</string>
    <string name="app_list_header_refresh_down">下拉刷新</string>
    <string name="app_list_header_refresh_last_update">上次更新于:%s</string>
    <string name="app_list_header_refresh_up">松开刷新</string>
    <string name="app_name">大智慧</string>
    <string name="aready_attention">已关注</string>
    <string name="at_login">登录中</string>
    <string name="at_logout">登出中</string>
    <string name="at_on_camera">打开摄像头中</string>
    <string name="auto_login_error">帐号登录失败，请手动登录!</string>
    <string name="awayTeam">客队</string>
    <string name="awayWin">主负</string>
    <string name="back">返回</string>
    <string name="backtoSelect">继续选择比赛</string>
    <string name="baiwei">百位</string>
    <string name="bancang">半仓</string>
    <string name="bankfind">银行余额查询</string>
    <string name="banktotrade">银行转证券</string>
    <string name="baozi">豹子</string>
    <string name="bei">倍</string>
    <string name="bei_qi_empty">倍数和期号不能为0</string>
    <string name="bet">投注</string>
    <string name="betJcMax">最大倍数上限为100000</string>
    <string name="betLeast">请输入大于1的整数</string>
    <string name="betZcMax">最大倍数上限为1000</string>
    <string name="bianji">编辑</string>
    <string name="bias_info">"当日收盘价与移动平均线之间的差距；
用法：
正的乖离率愈大，表示短期获利愈大，则获利回吐的可能性愈高；负的乖离率愈大，则空头回补的可能性愈高。
按个股收盘价与不同天数的平均价之间的差距，可绘制不同的 BIAS 线。"</string>
    <string name="bidu">必读</string>
    <string name="bifa">必发</string>
    <string name="bifajiaoyiliang">必发交易量</string>
    <string name="binary_option">期权</string>
    <string name="bjdc">北京单场</string>
    <string name="boll_info">"BOLL 又称布林线指标是利用统计学原理 , 先规定一个标准差 , 再求算出一个上下限波动区间 , 其波动的上下限随股价浮动 应用原则 。
必须配合其它技术指标共同分析 当布林通道由宽变窄时 , 说明股价逐渐向中值回归 , 股市进入一个整理区间 投资者应以观望为主 ；当通道由窄变宽时 , 意味着行情开始发生变化； 如果股价逼近或穿过上限值 , 表明超买力量增强 , 股市可能会短期下跌 , 此时应卖出股票 反之 , 当股价逼近或穿过下限值时 , 表明超卖力量增强 , 股市可能会反弹向上。"</string>
    <string name="bottom_slide_notice">上拉可翻到下一页...</string>
    <string name="browse">浏览</string>
    <string name="browse_stock_edit">编辑最新浏览</string>
    <string name="browser_cancel">取消</string>
    <string name="browser_refresh">刷新</string>
    <string name="browser_share">分享</string>
    <string name="browser_showoutside">在浏览器中打开</string>
    <string name="browser_tel">tel:</string>
    <string name="browserphonenumber">tel:02120219990</string>
    <string name="btn_get_sms_password">获取验证码</string>
    <string name="button_ok">确定</string>
    <string name="buy_amount">金额</string>
    <string name="buy_amount_empty_error">购买金额不能为空！</string>
    <string name="buy_amount_more_than_error">购买金额不能小于0，不能大于最大购买金额！</string>
    <string name="buy_complete_rate">完成度</string>
    <string name="buy_dec">买跌</string>
    <string name="buy_inc">买涨</string>
    <string name="buy_include_all">全包</string>
    <string name="buy_include_half">半包</string>
    <string name="buy_no_search_data">未搜索到相关合买方案</string>
    <string name="buy_participants">参与人数</string>
    <string name="buy_popular">人气</string>
    <string name="buy_purchase_follow_failed">合买跟单失败！</string>
    <string name="buy_purchase_follow_success">合买跟单成功！</string>
    <string name="buy_purchase_immediately">付款</string>
    <string name="buy_schema_amount">方案总额(元)</string>
    <string name="buy_schema_code">方案号</string>
    <string name="buy_score">战绩</string>
    <string name="buy_search_empty_hint">搜索结果为空！</string>
    <string name="buy_search_hint">请输入用户名</string>
    <string name="buy_search_title">搜索</string>
    <string name="buy_search_title_cancel">取消</string>
    <string name="buyorders">总买</string>
    <string name="bzts">不再提示</string>
    <string name="camera_summary">开关摄像头</string>
    <string name="cancel">取消</string>
    <string name="cannot_gain">此方案无法盈利，请重新选号</string>
    <string name="caopanshi">操盘室</string>
    <string name="capital">资金股份</string>
    <string name="cci_info">"用目前股价的波动程度和常态分布范围比较，来得出超买或超卖的结论，用于捕捉趋势反转点。
算法：
典型价格与典型价格的 N 日移动平均的差除以 N 日内典型价格的平均绝对偏差。
用法：
当 CCI 小于 -100 时为买入信号， CCI 大于 100 时为卖出信号；
股价产生背离现象时，是一项明显的警告信号。
参数：
N 设定计算移动平均的天数，一般为 14"</string>
    <string name="cellphone">手机号</string>
    <string name="chang">场</string>
    <string name="changMoblie">换个手机号</string>
    <string name="changci">场次</string>
    <string name="change_net_ip">下次连接服务器地址：</string>
    <string name="changetoCjl">当前切换为“成交量”</string>
    <string name="changetoZde">当前切换为“涨跌额”</string>
    <string name="changetoZdf">当前切换为“涨跌幅”</string>
    <string name="charge_tips">本次操作将产生0.1元资讯费用，确认发送本条短信吗？</string>
    <string name="check_bet_protocol">请勾选同意《用户合买代购协议》</string>
    <string name="checkfallnumber">请输入正确的手机号码</string>
    <string name="checkfallother">获取验证码失败【其他原因】</string>
    <string name="checknumberiswrong">请输入正确的验证码</string>
    <string name="checksuccess">验证码已成功发出，请注意查收，若您在30秒内仍未收到，请重试。</string>
    <string name="chjy">晨会纪要</string>
    <string name="choice5">11选5</string>
    <string name="cjxw">财经新闻</string>
    <string name="clear">清空</string>
    <string name="clearNumber">清空号码</string>
    <string name="com_name">大智慧</string>
    <string name="comment">评论</string>
    <string name="comment_content_none">请输入评论内容</string>
    <string name="comment_share_text">具体详情，请点击下载大智慧客户端</string>
    <string name="comment_submit_error">评论发表失败 ..请再试</string>
    <string name="comment_submit_success">评论发表成功</string>
    <string name="company">上海大智慧股份有限公司版权所有</string>
    <string name="completeInfo">完善账户信息</string>
    <string name="confirm">确定</string>
    <string name="confirm_tips">确认提示</string>
    <string name="copyright">©2007-2015</string>
    <string name="ctrl_dayK">日K</string>
    <string name="ctrl_fenshi">分时</string>
    <string name="ctrl_minutes_bottom">分钟</string>
    <string name="ctrl_monthK">月K</string>
    <string name="ctrl_weekedK">周K</string>
    <string name="dadan">大单</string>
    <string name="desc">desc</string>
    <string name="dilei">地雷</string>
    <string name="fiveminute_zhangdie">涨速</string>
    <string name="fxts">风险提示</string>
    <string name="general">概况</string>
    <string name="gonggao2">公告</string>
    <string name="has_newest_version">当前是最新版</string>
    <string name="hk_stock">港股</string>
    <string name="hold">持股</string>
    <string name="home_menu_update">检查新版本</string>
    <string name="hudong">股友会</string>
    <string name="hushen_guba">慧股吧</string>
    <string name="hushen_zhangdie">个股涨跌</string>
    <string name="hzrx">合作热线</string>
    <string name="hzrx_phonenum">021-20219988</string>
    <string name="item_basic_lay">基本面</string>
    <string name="item_data_lay">数据面</string>
    <string name="item_technical_lay">技术面</string>
    <string name="kfrx">客服热线</string>
    <string name="newGuide">新手指引</string>
    <string name="phonenumber">021-20219990</string>
    <string name="phrase_1">"说的太好了，顶一个！ "</string>
    <string name="phrase_2">"路过 ，我就打个酱油 。 "</string>
    <string name="phrase_3">"涨涨涨涨 ，老天保佑这只股票。 "</string>
    <string name="phrase_4">"开玩笑 ，大家不要相信 。 "</string>
    <string name="phrase_5">"好像 有道理，可否详细解释一下？ "</string>
    <string name="plate_zhangdie">板块涨跌</string>
    <string name="rebo_note">平台用户协议</string>
    <string name="sh_stock">A股</string>
    <string name="share">份额</string>
    <string name="spot">现货</string>
    <string name="struct">结构</string>
    <string name="trend">走势</string>
    <string name="xinwen">新闻</string>
    <string name="yanbao">研报</string>
    <string name="yjfk">意见反馈</string>
    <string name="zixun">资讯</string>
</resources>