<?xml version="1.0" encoding="utf-8"?>
<merge android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="3.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/font_larger" android:id="@id/menu_ty171" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/spot" android:layout_weight="1.0" style="@style/item_menustyle" />
    <TextView android:textSize="@dimen/font_larger" android:id="@id/menu_ty172" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/binary_option" android:layout_weight="1.0" style="@style/item_menustyle" />
    <TextView android:textSize="@dimen/font_larger" android:id="@id/menu_ty173" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/sh_stock" android:layout_weight="1.0" style="@style/item_menustyle" />
    <TextView android:textSize="@dimen/font_larger" android:id="@id/menu_ty174" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/hk_stock" android:layout_weight="1.0" style="@style/item_menustyle" />
</merge>