<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/phrase_list_ll" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="200.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:background="#ffc3c3c5" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textColor="#ff0b0c0f" android:gravity="fill_vertical" android:id="@id/phrase_1" android:background="@drawable/phrase_bg" android:paddingLeft="30.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/phrase_1" android:layout_weight="1.0" />
    <View android:background="#ffc3c3c5" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textColor="#ff0b0c0f" android:gravity="fill_vertical" android:id="@id/phrase_2" android:background="@drawable/phrase_bg" android:paddingLeft="30.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/phrase_2" android:layout_weight="1.0" />
    <View android:background="#ffc3c3c5" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textColor="#ff0b0c0f" android:gravity="fill_vertical" android:id="@id/phrase_3" android:background="@drawable/phrase_bg" android:paddingLeft="30.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/phrase_3" android:layout_weight="1.0" />
    <View android:background="#ffc3c3c5" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textColor="#ff0b0c0f" android:gravity="fill_vertical" android:id="@id/phrase_4" android:background="@drawable/phrase_bg" android:paddingLeft="30.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/phrase_4" android:layout_weight="1.0" />
    <View android:background="#ffc3c3c5" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    <TextView android:textColor="#ff0b0c0f" android:gravity="fill_vertical" android:id="@id/phrase_5" android:background="@drawable/phrase_bg" android:paddingLeft="30.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/phrase_5" android:layout_weight="1.0" />
</LinearLayout>