<?xml version="1.0" encoding="utf-8"?>
<merge android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:weightSum="5.0"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <TextView android:id="@id/menu_ty91" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/trend" android:layout_weight="1.0" style="@style/item_menustyle" />
        <ImageView android:layout_width="1.0dip" android:layout_height="@dimen/dip25" android:src="@drawable/table_divide" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <TextView android:id="@id/menu_ty92" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/general" android:layout_weight="1.0" style="@style/item_menustyle" />
        <ImageView android:layout_width="1.0dip" android:layout_height="@dimen/dip25" android:src="@drawable/table_divide" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <TextView android:id="@id/menu_ty93" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/hold" android:layout_weight="1.0" style="@style/item_menustyle" />
        <ImageView android:layout_width="1.0dip" android:layout_height="@dimen/dip25" android:src="@drawable/table_divide" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <TextView android:id="@id/menu_ty94" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/share" android:layout_weight="1.0" style="@style/item_menustyle" />
        <ImageView android:layout_width="1.0dip" android:layout_height="@dimen/dip25" android:src="@drawable/table_divide" />
    </LinearLayout>
    <TextView android:id="@id/menu_ty95" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/struct" android:layout_weight="1.0" style="@style/item_menustyle" />
</merge>